fix: styling issues with overflow

--- a/src/components/Store/components/styles.module.css
+++ b/src/components/Store/components/styles.module.css
@@ -47,5 +47,5 @@
 
 .desc {
     flex: 1;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
 }
