--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -10,6 +10,7 @@
 
 .header1 {
     font-size: 50px;
+    overflow-wrap: anywhere;
 }
 
 .header2 {
